# coursedb

./: .env  .gitignore  Cargo.toml  LICENSE  readme.md
sql/: db.sql
wasm-client/: Cargo.toml
webapp/src/: handlers.rs
webapp/static/: register.html
webservice/: Cargo.toml
webservice/src/: errors.rs  routers.rs
webservice/src/dbaccess/: course.rs  teacher.rs
webservice/src/handlers/: course.rs  teacher.rs
webservice/src/models/: course.rs
