[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
resolver = "2"
default-run = "teacher-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-rt = "2.10.0"
actix-web = "4.7.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
openssl = { version = "0.10.64", features = ["vendored"] }
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }

[[bin]]
name = "teacher-service"
